--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "async": "~0.2.9",
     "dbox": "~0.6.3",
     "passport": "~0.1.17",
-    "mongoose": "~3.6.19"
+    "mongoose": "~3.6.19",
+    "multiparty": "~2.1.8",
+    "batch": "~0.5.0",
+    "oauth": "~0.9.10"
   }
 }
