--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "passport-local": "~0.1.6",
     "lodash": "~2.0.0",
     "async": "~0.2.9",
-    "dbox": "~0.6.3",
+    "dbox": "git://github.com/plediii/node-dbox.git#master",
     "passport": "~0.1.17",
     "mongoose": "~3.6.19",
     "multiparty": "~2.1.8",
