--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "~3.6.19",
     "multiparty": "~2.1.8",
     "batch": "~0.5.0",
-    "oauth": "~0.9.10"
+    "oauth": "~0.9.10",
+    "knox": "~0.8.6"
   }
 }
