--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "AllYourPhotosConnectors",
   "version": "0.0.1",
   "description": "ERROR: No README.md file found!",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,7 +21,7 @@
     "passport-twitter": "~1.0.2",
     "passport-dropbox": "~0.1.2",
     "passport-local": "~0.1.6",
-    "lodash": "~2.0.0",
+    "lodash": "*",
     "async": "~0.2.9",
     "dbox": "git://github.com/plediii/node-dbox.git#master",
     "passport": "~0.1.17",
@@ -28,6 +29,8 @@
     "multiparty": "~2.1.8",
     "batch": "~0.5.0",
     "oauth": "~0.9.10",
-    "knox": "~0.8.6"
+    "knox": "~0.8.6",
+    "nconf": "~0.6.9",
+    "nconf-redis": "~0.3.1"
   }
 }
