--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "repository": "",
   "author": "",
   "license": "BSD",
+  "peerDependencies" : {
+    "AllYourPhotosModels": "irony/ayp-models",
+  },
   "dependencies": {
     "require-dir": "~0.1.0",
     "image-headers": "~0.3.3",
-    "AllYourPhotosModels": "irony/ayp-models",
     "redis": "~0.8.4",
     "passport-instagram": "~0.1.2",
     "passport-flickr": "~0.1.1",
