--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "nconf": "*"
   },
   "dependencies": {
-    "AllYourPhotosModels": "irony/ayp-models",
+    "AllYourPhotosModels": "irony/ayp-models#master",
     "nconf": "*",
     "lodash": "*",
     "mongoose": "*",
