--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "nconf": "*"
   },
   "dependencies": {
-    "AllYourPhotosModels": "irony/ayp-models#master",
+    "AllYourPhotosModels": "irony/ayp-models",
     "nconf": "*",
     "lodash": "*",
     "mongoose": "*",
@@ -33,6 +33,8 @@
     "passport-dropbox": "*",
     "passport-local": "*",
     "batch": "~0.5.0",
-    "oauth": "*"
+    "oauth": "*",
+    "passport-strategy": "~1.0.0",
+    "readable-stream": "~1.0.26-2"
   }
 }
