--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "AllYourPhotosConnectors",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "ERROR: No README.md file found!",
-  "private": true,
+  "publishConfig": { "registry": "http://npm.allyourphotos.org/" },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
