--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "ayp-connectors",
   "version": "0.0.1",
   "description": "ERROR: No README.md file found!",
-  "publishConfig": {
-    "registry": "http://npm.allyourphotos.org/"
-  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,7 +13,7 @@
     "nconf": "*"
   },
   "dependencies": {
-    "AllYourPhotosModels": "irony/ayp-models",
+    "ayp-models": "*",
     "async": "*",
     "batch": "~0.5.0",
     "dbox": "0.5.5",
